# pure-python-system-design

./: README.md
.github/workflows/: ci.yml
url_shortener/: Makefile  README.md  pyproject.toml
url_shortener/docs/: components_ru.puml  ru.md  sequence_ru.puml
url_shortener/src/url_shortener/: __init__.py  __main__.py  api.py  database.py  encoder.py  exceptions.py  handlers.py  http_parser.py  logger.py  service.py  storage.py  types.py  utils.py
url_shortener/src/url_shortener/application/: __init__.py  service.py
url_shortener/src/url_shortener/domain/: __init__.py  exceptions.py
url_shortener/src/url_shortener/infrastructure/: __init__.py  exceptions.py  http_parser.py  http_serializer.py  logger.py  storage.py  types.py  utils.py
url_shortener/src/url_shortener/presentation/: __init__.py  api.py  handlers.py
url_shortener/tests/: conftest.py  test_api.py  test_benchmarks.py  test_encoder.py  test_handlers.py  test_logger.py  test_sqlite_storage.py  test_storage.py  test_svc.py  test_utils.py
